--- a/style.css
+++ b/style.css
@@ -64,3 +64,8 @@ footer {
 
     background-image: url('images/kick.png');
 }
+
+.pressed {
+    box-shadow: 0 3px 4px 0 #DBEDF3;
+    opacity: .5;
+}
